# masquerade

./: requirements.txt  setup.cfg
masquerade/: __init__.py  commands.py  dnsmasq.py
masquerade/cmd/: server.py
