[metadata]
name = masquerade
summary = Really dumb local only DNSaaS based on dnsmasq
author = Nicola Heald
author-email = nicola@notnowlewis.com
version = 0.0.1
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    masqueraded = masquerade.cmd.server:main
